--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ testngVersion=7.4.0
 gsonVersion=2.10
 ballerinaGradlePluginVersion=1.0.0
 
-ballerinaLangVersion=2201.6.0
+ballerinaLangVersion=2201.6.0-SNAPSHOT
 
 # Direct Dependencies
 
